--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mantine/hooks": "^8.1.0",
     "@tabler/icons-react": "^3.34.0",
     "axios": "^1.10.0",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.525.0",
     "next": "15.3.3",
     "react": "^19.0.0",
@@ -24,6 +25,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.10",
     "@types/axios": "^0.9.36",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20.19.1",
     "@types/react": "^19",
     "@types/react-dom": "^19",
