--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-select": "^5.10.2",
     "react-toastify": "^11.0.5"
   },
   "devDependencies": {
